--- a/src/components/loginPanel/loginForm/loginForm.scss
+++ b/src/components/loginPanel/loginForm/loginForm.scss
@@ -15,6 +15,9 @@
         font-size: 22px;
     }
     &__input {
+        display: block;
+        margin: 0 auto;
+        width: 350px;
         font-size: 16px;
         
         border: none;
