--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,7 @@
 * {
-    font-family: sans-serif;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+body {
+    margin: 0;
+    padding: 10px;
 }
