blogPost revealed.....loadmore button is removed when count of loaded posts less than requested count

--- a/src/components/blogGrid/selectCount/selectCount.scss
+++ b/src/components/blogGrid/selectCount/selectCount.scss
@@ -5,4 +5,9 @@
     justify-content: flex-end;
     gap: 10px;
 
+    font-family: 'Roboto', sans-serif;
+
+    select {
+            font-family: 'Roboto', sans-serif;
+    }
 }
