--- a/src/components/blogGrid/blogCard/blogCard.scss
+++ b/src/components/blogGrid/blogCard/blogCard.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;600&display=swap');
 
 .blog-card {
 
@@ -10,10 +10,16 @@
     border-radius: 10px;
     overflow: hidden;
 
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-start;
+    &__link {
+        display: block;
+        width: 100%;
+        height: 100%;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        align-items: flex-start;
+    }
 
     &__bg {
         position: absolute;
@@ -33,7 +39,7 @@
         max-height: 54px;
         overflow: hidden;
 
-        font-weight: 700;
+        font-weight: 600;
         font-size: 14px;
         line-height: 18px;
         font-family: 'Roboto', sans-serif;
@@ -65,7 +71,7 @@
             color: rgb(255, 255, 255)
         }
         &--human {
-            background-color: rgb(4, 255, 0);
+            background-color: rgb(44, 255, 41);
             color: rgb(0, 0, 0)
         }
         &--inno {
