--- a/src/components/blogGrid/blogGrid.scss
+++ b/src/components/blogGrid/blogGrid.scss
@@ -1,9 +1,8 @@
 .blog-grid {
-    margin: 50px auto;
+    margin-top: 30px;
+    margin-bottom: 20px;
     position: relative;
-
-    width: 900px;
-
+    
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 1fr;
