--- a/src/components/blogPost/blogPost.scss
+++ b/src/components/blogPost/blogPost.scss
@@ -3,6 +3,7 @@
 
 .blog-post {
     margin-top: 50px;
+    margin-bottom: 30px;
 
     white-space:pre-line;
 
@@ -13,7 +14,7 @@
         position: relative;
 
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 2fr 3fr;
         column-gap: 30px;
 
         height: 400px;
@@ -106,10 +107,8 @@
         padding-left: 20px;
     }
     &__photo {
-        margin-top: 15px;
-        margin-bottom: 15px;
         display: block;
-        margin: 0 auto;
+        margin: 15px auto;
         max-width: 100%;
         max-height: 500px;
     }
@@ -118,11 +117,46 @@
         margin-bottom: 15px;
     }
     &__attention {
+        margin-top: 15px;
+        margin-bottom: 15px;
         padding: 20px;
         border-radius: 20px;
         background-color: rgb(91, 175, 253);
         border: 1px solid rgb(151, 188, 255);
         box-shadow: 5px 5px 7px rgb(52, 114, 173);
         color: #fff;
+    }
+    &__links {
+        margin-top: 50px;
+
+        display: flex;
+        justify-content: space-between;
+    }
+    &__link {
+        border: 1px solid black;
+        padding: 5px 10px;
+
+        width: max-content;
+
+        transition: all 0.5s;
+
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+        svg {
+            width: 25px;
+            transform: scale(1.2);
+            transition: all 0.5s;
+        }
+
+        &:hover {
+            background-color: rgb(0, 0, 0);
+            color: #fff;
+
+            svg {
+                filter: invert(1)
+            }
+        }
     }
 }
