--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,3 +5,13 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.header__profile {
+    margin-left: auto;
+    margin-right: 30px;
+    font-family: Montserrat, sans-serif;
+
+    &:hover {
+        text-decoration: underline !important;
+    }
+}
