--- a/src/components/editPost/editPost.scss
+++ b/src/components/editPost/editPost.scss
@@ -49,6 +49,38 @@
         width: 200px;
         text-align: center;
     }
+    &__categories {
+        &-create {
+            font-size: 12px;
+        }
+        &-new {
+            margin-top: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items:center;
+            gap: 5px;
+        }
+        &-send {
+            margin-top: 10px;
+            display: block;
+            width: max-content;
+            padding: 5px;
+            background-color: rgb(183, 244, 252);
+            border: 1px solid rgb(119, 119, 119);
+            border-top: none;
+            border-left: none;
+            border-radius: 5px;
+            box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.477);
+            cursor: pointer;
+            &:hover {
+                transform: translate(3px, 3px);
+                box-shadow: none;
+            }
+        }
+        &-name {
+            padding: 5px;
+        }
+    }
     &__text {
         height: 500px;
     }
@@ -81,4 +113,10 @@
         color:crimson;
         text-align: center;
     }
+}
+
+.checkbox-wrapper {
+    display: flex;
+    align-items:center;
+    justify-content: center;
 }
