delete post button in editpost page

--- a/src/components/editPost/editPost.scss
+++ b/src/components/editPost/editPost.scss
@@ -102,6 +102,23 @@
             box-shadow: none;
         }
     }
+    &__delete {
+        display: block;
+        width: max-content;
+        margin: 20px auto;
+        padding: 10px 20px;
+        background-color: rgb(255, 109, 214);
+        border: 1px solid rgb(119, 119, 119);
+        border-top: none;
+        border-left: none;
+        border-radius: 5px;
+        box-shadow: 3px 3px 7px #000;
+        cursor: pointer;
+        &:hover {
+            transform: translate(3px, 3px);
+            box-shadow: none;
+        }
+    }
 
     &__success {
         margin-top: 15px;
