--- a/src/components/me/me.scss
+++ b/src/components/me/me.scss
@@ -28,3 +28,18 @@
         border-color: #ddd;
     }
 }
+
+.me__more {
+    display: block;
+    margin: 20px auto;
+    background-color: transparent;
+    border:1px solid rgba(51, 51, 51, 0.632);
+    border-radius: 10px;
+    box-shadow: 4px 4px 7px rgba(51, 51, 51, 0.603);
+    padding: 10px;
+    cursor: pointer;
+    &:hover {
+        transform: translate(3px, 3px);
+        box-shadow: none;
+    }
+}
